add connection string configuration for MySQL database

--- a/AttendanceSystem/appsettings.json
+++ b/AttendanceSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database={Name Of user};User=attendance_user;Password={Put password here};"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
