update connection string for AttendanceSystem database configuration

--- a/AttendanceSystem/appsettings.json
+++ b/AttendanceSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database={Name Of user};User=attendance_user;Password={Put password here};"
+    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User={name of user};Password={Password};"
   },
   "Logging": {
     "LogLevel": {
