--- a/AttendanceSystem/appsettings.json
+++ b/AttendanceSystem/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User={name of user};Password={Password};"
   },
+  "JWT": {
+    "Key": "{put your secret key here}",
+    "Issuer": "AttendanceSystem",
+    "Audience": "AttendanceSystemUsers",
+    "ExpirationMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
