--- a/AttendanceSystem/appsettings.json
+++ b/AttendanceSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User={name of user};Password={Password};"
+    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User=root;Password={Password};"
   },
   "JWT": {
     "Key": "{put your secret key here}",
