--- a/AttendanceSystem/appsettings.json
+++ b/AttendanceSystem/appsettings.json
@@ -1,18 +1,22 @@
 {
+  // change {password} to database password, and key to something thats 256 bits at least; don't forget to change before pushing to github
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User={name of user};Password={Password};"
+    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User=root;Password={Password};"
   },
   "JWT": {
-    "Key": "{put your secret key here}",
+    "Key": "SuperSecretEncryptionThatEncryptsPasswords",
     "Issuer": "AttendanceSystem",
     "Audience": "AttendanceSystemUsers",
     "ExpirationMinutes": 60
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
+
+
 }
+ 
