Student management page and functions and simple page for attendance with nothing in it yet

--- a/ProfessorApp/ProfessorApp.csproj
+++ b/ProfessorApp/ProfessorApp.csproj
@@ -76,6 +76,9 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <MauiXaml Update="Views\AttendancePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\StudentManagement.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
