--- a/ProfessorApp/ProfessorApp.csproj
+++ b/ProfessorApp/ProfessorApp.csproj
@@ -47,7 +47,7 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+		<MauiImage Update="Resources\Images\dotnet_bandroid maui-iosot.png" Resize="True" BaseSize="300,185" />
 		<MauiImage Update="Resources\Images\utd_logo.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
