--- a/AttendanceSystem/AttendanceSystem.csproj
+++ b/AttendanceSystem/AttendanceSystem.csproj
@@ -17,4 +17,8 @@
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\AttendanceShared\AttendanceShared.csproj" />
+	</ItemGroup>
+
 </Project>
