Added course management page and changed API calls

--- a/ProfessorApp/ProfessorApp.csproj
+++ b/ProfessorApp/ProfessorApp.csproj
@@ -70,6 +70,9 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <Compile Update="Views\CoursesPage.xaml.cs">
+	    <DependentUpon>CoursesPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\CoursePage.xaml.cs">
 	    <DependentUpon>CoursePage.xaml</DependentUpon>
 	  </Compile>
@@ -79,10 +82,13 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <MauiXaml Update="Views\CoursePage.xaml">
+	  <MauiXaml Update="Views\CoursesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\CoursePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\RegisterPage.xaml">
