--- a/AttendanceSystem/appsettings.json
+++ b/AttendanceSystem/appsettings.json
@@ -1,7 +1,7 @@
 {
   // change {password} to database password, and key to something thats 256 bits at least; don't forget to change before pushing to github
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User=root;Password={Password};"
+    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User=root;Password=Dontforgetthis@1;"
   },
   "JWT": {
     "Key": "SuperSecretEncryptionThatEncryptsPasswords",
