--- a/AttendanceSystem/appsettings.json
+++ b/AttendanceSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User=root;Password={Password};"
+    "DefaultConnection": "Server=localhost;Database=AttendanceSystem;User=root;Password=Dontforgetthis@1;"
   },
   "JWT": {
     "Key": "SuperSecretEncryptionThatEncryptsPasswords",
