--- a/ProfessorApp/ProfessorApp.csproj
+++ b/ProfessorApp/ProfessorApp.csproj
@@ -48,13 +48,23 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bandroid maui-iosot.png" Resize="True" BaseSize="300,185" />
-		<MauiImage Update="Resources\Images\utd_logo.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiImage Remove="Resources\Images\Image1.png" />
+	  <MauiImage Remove="Resources\Images\utd_logo.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\Images\Image1.png" />
+	  <None Remove="Resources\Images\utdlogo.png" />
+	  <None Remove="Resources\Images\utd_logo.png" />
 	</ItemGroup>
 
 	<ItemGroup>
