Added logos to buttons and finished method to automatically redirect if attendance with current IP is found

--- a/AttendanceShared/AttendanceShared.csproj
+++ b/AttendanceShared/AttendanceShared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Syncfusion.Maui.Buttons" Version="29.1.41" />
+  </ItemGroup>
+
 </Project>
